tests/snapshots/fixtures__branch_names@consecutive-hyphens-elided.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 41
expression: result
input_file: tests/fixtures/branch_names/consecutive-hyphens-elided.kdl
---
exit: 0

branch AB-100-feat-add-widget-desktop-only-:
  * feat: add widget -- desktop only!
