tests/snapshots/fixtures__branch_names@github-issue-prefix.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 41
expression: result
input_file: tests/fixtures/branch_names/github-issue-prefix.kdl
---
exit: 0

branch 789-feat-implement-rate-limiting:
  * feat: implement rate limiting
