tests/snapshots/fixtures__branch_names@jira-ticket-prefix.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 41
expression: result
input_file: tests/fixtures/branch_names/jira-ticket-prefix.kdl
---
exit: 0

branch DX-456-feat-implement-rate-limiting:
  * feat: implement rate limiting
