tests/snapshots/fixtures__branch_names@special-chars-sanitized.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 41
expression: result
input_file: tests/fixtures/branch_names/special-chars-sanitized.kdl
---
exit: 0

branch AB-100-feat-add-widget-experimental-:
  * feat: add widget (experimental)
