tests/snapshots/fixtures__execution@clean-split-executes.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 31
expression: result
input_file: tests/fixtures/execution/clean-split-executes.kdl
---
exit: 0

branch AB-100-feat-add-widget:
  * feat: add widget
  files: src/lib.rs, src/widget.rs

branch AB-200-feat-add-gadget:
  * feat: add gadget
  files: src/gadget.rs, src/lib.rs
