tests/snapshots/fixtures__execution@sequential-commits-same-issue.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 31
expression: result
input_file: tests/fixtures/execution/sequential-commits-same-issue.kdl
---
exit: 0

branch AB-100-feat-add-widget:
  * feat: add widget
  * feat: add widget tests
  * feat: document widget
  files: src/lib.rs, src/widget.rs, src/widget_test.rs
