tests/snapshots/fixtures__planning@branch-name-collision.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 11
expression: result
input_file: tests/fixtures/planning/branch-name-collision.kdl
---
exit: 0

branch AB-100-feat-add-widget:
  * feat: add widget

branch AB-200-feat-add-widget:
  * feat: add widget
