tests/snapshots/fixtures__planning@commit-without-trailer-excluded.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 11
expression: result
input_file: tests/fixtures/planning/commit-without-trailer-excluded.kdl
---
exit: 0

branch AB-100-feat-add-widget:
  * feat: add widget
